feat: cadastro mercado, consulta mercado.
